syntax="proto3";

package driver;

option go_package ="shared/proto/driver;driver";

message Location {
    double latitude =1;
    double longitue =2;
}

message Driver {
    string id=1;
    string name = 2;
    string profile_pic = 3;
    string car_plate = 4;
    string geo_hash = 5;
    string package_slug = 6;
    Location location = 7;
}

service DriverService{
    rpc RegisterDriver(RegisterDriverRequest) returns (RegisterDriverResposne);
    rpc UnregisterDriver(RegisterDriverRequest) returns (RegisterDriverResposne);
}

message RegisterDriverRequest{
    string driver_id = 1;
}

message RegisterDriverResposne{
    string id = 1;    
}